# sabre-lib-cpp-sabre

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  generate-coverage.sh
.devcontainer/: devcontainer.json
.github/workflows/: cd-publish-docs-github-pages.yml  push-coding-branch.yml
_codeql_build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake
_codeql_build_dir/src/: Makefile  cmake_install.cmake
docs/: Doxyfile  pyproject.toml
docs/source/: conf.py  index.rst
docs/source/00-library-introduction/: 00-introduction.rst
docs/source/01-implementations/: 00-introduction.rst  01-classes-to-override.rst
docs/source/02-applications/: 00-introduction.rst  01-applications.rst
docs/source/99-api/: 00-api-docs.rst
src/: CMakeLists.txt
src/pilot/: CMakeLists.txt  main.cpp  mcu.cpp  mcu.hpp  presenter.hpp  simulator.cpp  simulator.hpp
src/pilot/imgui_presenter/: CMakeLists.txt  imgui_presenter.cpp  imgui_presenter.hpp  imgui_visitor.cpp  imgui_visitor.hpp
src/pilot/presenters/: imgui_presenter.cpp  imgui_presenter.hpp
src/pilot/sabre_pilot/: core.cpp  core.hpp  factory.cpp  factory.hpp  hal.cpp  hal.hpp
src/pilot/sabre_pilot/gpio/: gpio.cpp  gpio.hpp  input_gpio.cpp  input_gpio.hpp  output_gpio.cpp  output_gpio.hpp
src/pilot/sabre_pilot/uart/: uart.cpp  uart.hpp
src/pilot/simulator/: device.cpp  device.hpp  device_connector.cpp  device_connector.hpp  device_visitor.hpp  mcu.cpp  mcu.hpp  presenter.cpp  presenter.hpp  simulator.cpp  simulator.hpp
src/sabre/: CMakeLists.txt  factory.cpp  factory.h  factory.hpp
src/sabre/clients/: mqtt.cpp  mqtt.h  mqtt.hpp  ntp.hpp
src/sabre/exceptions/: exceptions.h  exceptions.hpp
src/sabre/generic/: ipv4_address.cpp  ipv4_address.h  ipv4_address.hpp
src/sabre/gpio/: composite_input_gpio.cpp  composite_input_gpio.h  composite_input_gpio.hpp  composite_output_gpio.cpp  composite_output_gpio.h  composite_output_gpio.hpp  gpio.h  gpio.hpp  input_gpio.cpp  input_gpio.h  input_gpio.hpp  output_gpio.h  output_gpio.hpp
src/sabre/logging/: log_handlers.cpp  log_handlers.h  log_handlers.hpp  logging.cpp  logging.h  logging.hpp
src/sabre/sabre/: factory.cpp  factory.hpp
src/sabre/sabre/app/: app.cpp  app.hpp
src/sabre/sabre/clients/: mqtt.cpp  mqtt.hpp  ntp.hpp
src/sabre/sabre/core/: app.cpp  app.hpp  device_resource_manager.cpp  device_resource_manager.hpp  exceptions.cpp  exceptions.hpp  factory.hpp  gpio_resource_manager.cpp  gpio_resource_manager.hpp  network_resource_manager.cpp  network_resource_manager.hpp  os_resource_manager.cpp  os_resource_manager.hpp  resource_manager.cpp  resource_manager.hpp  serial_resource_manager.cpp  serial_resource_manager.hpp  time_resource_manager.cpp  time_resource_manager.hpp
src/sabre/sabre/devices/: gps_device.hpp  rgb_led_strip.cpp  rgb_led_strip.hpp  rgb_pixel_strip.cpp  rgb_pixel_strip.hpp  serial_nmea_gps_device.cpp  serial_nmea_gps_device.hpp
src/sabre/sabre/exceptions/: exceptions.cpp  exceptions.hpp
src/sabre/sabre/generic/: ipv4_address.cpp  ipv4_address.hpp
src/sabre/sabre/gpio/: gpio.hpp  input_gpio.cpp  input_gpio.hpp  output_gpio.hpp
src/sabre/sabre/hal/: gpio.cpp  gpio.hpp  input_gpio.cpp  input_gpio.hpp  output_gpio.hpp  serial.cpp  serial.hpp  uart.hpp
src/sabre/sabre/io/: serial_output_stream_buffer.cpp  serial_output_stream_buffer.hpp  uart_output_stream_buffer.cpp  uart_output_stream_buffer.hpp
src/sabre/service/: service.hpp
src/sabre/service_runner/: service_runner.cpp  service_runner.h  service_runner.hpp
src/sabre/system/: wall_clock.hpp
src/sabre/uart/: uart.hpp  uart_output_stream_buffer.cpp  uart_output_stream_buffer.h  uart_output_stream_buffer.hpp
src/sabre/utility/: timed_waiter.cpp  timed_waiter.h  wait_for.hpp
src/sabre/wifi/: wifi_soft_ap.hpp  wifi_station.hpp
tests/: CMakeLists.txt  test_app.cpp  test_clients_mqtt.cpp  test_exceptions.cpp  test_factory.cpp  test_generic_ipv4_address.cpp  test_gpio_input_gpio.cpp  test_logging_log_handlers.cpp  test_logging_logger.cpp  test_models_location.cpp  test_mqtt.cpp  test_nmea_gps_device.cpp  test_parsers_gps.cpp  test_parsers_nmea_validator.cpp  test_service_runner_service_runner.cpp  test_service_service.cpp  test_uart_uart_output_stream_buffer.cpp  test_utility_timed_waiter.cpp
tests/sabre_test_app/: CMakeLists.txt
tests/sabre_test_app/sabre_test_app/: test_app.cpp  test_app.hpp
tests/sabre_test_mocks/: CMakeLists.txt
tests/sabre_test_mocks/sabre_test_mocks/: core.cpp  core.hpp  devices.cpp  devices.hpp  hal.cpp  hal.hpp  hall.cpp  log.cpp  log.hpp  net.cpp  net.hpp  os.cpp  os.hpp  platform.cpp  platform.hpp  runtime.hpp  time.cpp  time.hpp  utility.cpp  utility.hpp
tests/sabre_testing/: CMakeLists.txt  core.cpp  core.hpp  factory.cpp  factory.hpp  hal.hpp  hall.cpp  log.cpp  log.hpp  net.cpp  net.hpp  os.cpp  utility.cpp  utility.hpp
tests/sabre_testing/app/: app.cpp  app.hpp
tests/sabre_testing/clients/: mqtt.cpp  mqtt.h  mqtt.hpp
tests/sabre_testing/gpio/: input_gpio.cpp  input_gpio.hpp
tests/sabre_testing/logging/: test_handler.cpp  test_handler.hpp
tests/sabre_testing/sabre_testing/: hal.hpp  log.cpp  log.hpp  net.hpp  os.hpp
tests/sabre_testing/service/: service.cpp  service.hpp
tests/sabre_testing/service_runner/: service_runner.cpp  service_runner.hpp
tests/sabre_testing/uart/: uart.cpp  uart.h  uart.hpp
tests/sabre_testing/utility/: timed_waiter.cpp  timed_waiter.hpp  wait_for.cpp  wait_for.hpp
tests/sabre_tests/: CMakeLists.txt  test_app.cpp  test_clients_mqtt.cpp  test_core.cpp  test_core.hpp  test_devices.cpp  test_exceptions.cpp  test_gpio_input_gpio.cpp  test_hal.cpp  test_io.cpp  test_log.cpp  test_logging.cpp  test_logging_log_handlers.cpp  test_logging_logger.cpp  test_models.cpp  test_models_location.cpp  test_net.cpp  test_nmea_gps_device.cpp  test_os.cpp  test_parsers.cpp  test_parsers_gps.cpp  test_runtime.cpp  test_service_service.cpp  test_types.cpp  test_uart_uart_output_stream_buffer.cpp  test_utility.cpp  test_utility_timed_waiter.cpp
(+52 files in other folders)
